mudando a cor principal

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="text-under-logo fw-bolder lh-1 pt-2 pb-4">Seus móveis montados com excelência e confiança</h1>
             <p>Precisa de um móvel de qualidade? Venha conhecer o que há de melhor em montagem de móveis.</p>
             <a href="https://api.whatsapp.com/send/?phone=5511943004713&text=Ol%C3%A1+Davi%21+Gostaria+de+agendar+uma+montagem.&type=phone_number&app_absent=0"
-            target="_blank" class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder">Solicite seu
+            target="_blank" class="btn btn-primary btn-contact px-5 py-2 text-white fs-6 fw-bolder">Solicite seu
                 orçamento agora!</a>
         </div>
     </header>
@@ -83,8 +83,8 @@
                 atividades importantes.</p>
         </div>
         <a href="https://api.whatsapp.com/send/?phone=5511943004713&text=Ol%C3%A1+Davi%21+Gostaria+de+agendar+uma+montagem.&type=phone_number&app_absent=0"
-        target="_blank" class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder"
-            class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
+        target="_blank"
+            class="btn btn-primary btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
             orçamento agora!</a>
     </div>
 
@@ -116,8 +116,8 @@
                 necessidades específicas.</p>
         </div>
         <a href="https://api.whatsapp.com/send/?phone=5511943004713&text=Ol%C3%A1+Davi%21+Gostaria+de+agendar+uma+montagem.&type=phone_number&app_absent=0"
-        target="_blank" class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder"
-            class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
+        target="_blank"
+            class="btn btn-primary btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
             orçamento agora!</a>
     </div>
 
@@ -213,12 +213,11 @@
             </button>
         </div>
         <a href="https://api.whatsapp.com/send/?phone=5511943004713&text=Ol%C3%A1+Davi%21+Gostaria+de+agendar+uma+montagem.&type=phone_number&app_absent=0"
-        target="_blank" class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder"
-            class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
+        target="_blank"             class="btn btn-primary btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
             orçamento agora!</a>
     </div>
 
-    <div class="container-fluid short-area mt-5 mb-5 flex-default-column text-white py-5">
+    <div class="container-fluid short-area mt-5 mb-5 flex-default-column text-white py-5 bg-gradient">
         <h1 class="mb-5">Mais de 1000 de clientes satisfeitos</h1>
         <h1>30 anos de experiência</h1>
     </div>
@@ -230,12 +229,12 @@
             fornecendo meus serviços com confiabilidade, segurança, pontualiadde, organização e excelência. Entregando
             sempre o que há de melhor em atendi</p>
         <a href="https://api.whatsapp.com/send/?phone=5511943004713&text=Ol%C3%A1+Davi%21+Gostaria+de+agendar+uma+montagem.&type=phone_number&app_absent=0"
-        target="_blank" class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder"
-            class="btn btn-success btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
+        target="_blank"
+            class="btn btn-primary btn-contact px-5 py-2 text-white fs-6 fw-bolder">Quero fazer um
             orçamento agora!</a>
     </div>
 
-    <div class="container-fluid contact-area flex-default-column p-4">
+    <div class="container-fluid contact-area flex-default-column p-4 bg-gradient">
         <h1 class="text-white mt-5">Entre em contato</h1>
         <div class="contact-item flex-default-column text-white p-5">
             <i class="gg-phone mb-3"></i>
